<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginPage">

    <EditText android:hint="@string/uname_hint" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uname_box"/>

    <EditText android:hint="@string/pass_hint" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass_box"/>

    <Button
        android:text="@string/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:onClick="logIn"
        />

    <Button
        android:text="@string/guest_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guest_button"
        android:onClick="logInAsGuest"/>

    <Button
        android:text="@string/new_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createAccount"
        android:id="@+id/new_account_button"/>
</LinearLayout>
