<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sam.l2type.CreateAccountPage">

    <EditText android:hint="@string/uname_hint" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uname_box"/>

    <EditText android:hint="@string/pass_hint" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass_box"
        android:inputType="textPassword"/>

    <Button
        android:text="@string/new_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createAccount"
        android:id="@+id/new_account_button"/>

    <Button
        android:text="@string/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goBack"
        android:id="@+id/back_button"/>
</LinearLayout>
